--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,11 +1,9 @@
-$body-color: slateblue;
-
 body {
-    color: $body-color;
-    font-family: sans-serif;
+    flex-direction: column;
+    box-sizing: border-box;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    place-content: center;
+    align-items: center;
 }
 
 canvas {
