--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,17 @@
+html,
 body {
-    flex-direction: column;
-    box-sizing: border-box;
-    display: flex;
-    place-content: center;
-    align-items: center;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    border: 0;
+    overflow: hidden;
+    display: block;
 }
 
 canvas {
-    border: 1px solid green;
+    position: absolute;
+    left: 0;
+    top: 0;
 }
 
 [hidden] {
